--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ body {
 .list {
   list-style: none;
 }
+.link {
+  text-decoration: none;
+}
 /* Шапка */
 .header {
   letter-spacing: 0.02em;
@@ -119,6 +122,7 @@ body {
 }
 .address {
   color: var(--accent-white-color);
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
 }
